Call now part is done

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 </div>
             </div>
         </section>
+
+        <section class="watch">
+            <div class="watch_content">
+                <h1>Always keep a positive mindset</h1>
+                <button>Call Now</button>
+            </div>
+        </section>
     </body>
 </body>
 
