Assignment is ready without bonus part

--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@
             </div>
         </section>
     </body>
+
+    <Footer>
+
+        <div class="future">
+            <h1>Future</h1>
+            <p class="future_p description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="future_p contact">Email : info@gmail.com</p>
+            <p class="future_p contact">Phone : 01500 00 00 00</p>
+            <img src="./images/icons/fb.png" alt="">
+            <img src="./images/icons/twitter.png" alt="">
+            <img src="./images/icons/youtube.png" alt="">
+        </div>
+
+        <div class="subscribe">
+            <h1>Subscribe</h1>
+            <form action="">
+                <input type="text" placeholder="Enter your email"> <br>
+                <button>Subscribe</button>
+            </form>
+        </div>
+    </Footer>
 </body>
 
 </html>
